# cpp_shad_students

./: .gitmodules  CODEOWNERS  LICENSE  LabInstructions.md  README.md
2017/sem1/refs/: reference.cpp
2017/sem1/seminar2/intro_cmake/ex1/: CMakeLists.txt
2017/sem1/seminar2/intro_cmake/ex1/src/: reader.cpp  reader.h  solver.cpp  writer.cpp  writer.h
2017/sem1/seminar7/: 1_exc_basics.cpp  (+1 more)
2017/seminar11/unittests_examples/: CMakeLists.txt
2017/seminar11/unittests_examples/src/: figures.cpp
2017/seminar2/intro_unit_testing/: CMakeLists.txt  README.md
2017/seminar4/: 1_classes_design_principles.txt  2_exe_content.txt
2017/seminar5/: 3_internal_reprsentation.txt  4_what_to_choose.txt  5_pass_arguments.txt
2017/seminar6/: 1_pass_arguments.txt  2_templates.cpp
2017/seminar7/: 3_exc_practices.txt
2017/seminar8/: 3_talk_about_ht.txt
2017/seminar9/: 11_function_parameters_call.txt  3_common_practices_push_back.cpp  4_common_practices_map.cpp  5_common_practices_smart_ptr.cpp  6_common_practices_join.cpp  7_common_practices_to_string.cpp  9_common_practices_caching.cpp
2018/refs/: reference.cpp
2018/seminar10/: 8_common_practices_sso.cpp
2018/seminar2/2_intro_cmake_and_unittesting/exp/: CMakeLists.txt
2018/seminar2/2_intro_cmake_and_unittesting/exp/src/tests/: util_unittest.cpp
2018/seminar4/: 1_ctors_order.cpp  2_virtuality_combat.cpp  4_class_vs_struct.cpp  5_classes_design_principles.txt
2018/seminar5/: 1_ex_sp_bad.cpp  1_ex_sp_better2.cpp  1_ex_up_1_bad.cpp  1_ex_up_2_bad.cpp  1_ex_up_2_better.cpp  2_README.txt
2018/seminar6/: 2_exc_ctor_dtor.cpp  3_exc_practices.txt
2018/seminar7/: 2_templates_specialization.cpp  3_templates_many_params_and_compilation.cpp  4_templates_inner_data.cpp
2018/seminar8/: 1_containers.txt
2018/seminar9/: 1_algos.cpp
2019/sem1/seminar2_readfiles_cmake_unittests/2_intro_cmake_and_unittesting/exp/: CMakeLists.txt
2019/sem1/seminar2_readfiles_cmake_unittests/2_intro_cmake_and_unittesting/exp/src/: main.cpp
2019/sem1/seminar2_readfiles_cmake_unittests/2_intro_cmake_and_unittesting/exp/src/explib/: solver.cpp  util.cpp  util.h
2019/sem1/seminar2_readfiles_cmake_unittests/2_intro_cmake_and_unittesting/exp/src/tests/: solver_unittest.cpp
2019_sem1/lecture10_algo_lambdas/: lecture.ipynb
2019_sem1/lecture10_compilation_linking/: lecture10.ipynb
2019_sem1/lecture10_optimization_techniques/: lecture.ipynb
2019_sem1/lecture11_algo_lambdas/: lecture.ipynb
2019_sem1/lecture12_compilation_linking/: lecture.ipynb  repetition.ipynb
2019_sem1/lecture12_unit_testing/: lecture.ipynb
2019_sem1/lecture1_intro/: lecture1.ipynb
2019_sem1/lecture2_functions_inout/: lecture2_functions_inout.ipynb
2019_sem1/lecture3_classes_1/: lecture3.ipynb
2019_sem1/lecture4_classes_2/: lecture4.ipynb
2019_sem1/lecture5_templates/: lecture5.ipynb
2019_sem1/lecture6_containers_iterators/: lecture6.ipynb  repetition.ipynb
2019_sem1/lecture7_exceptions/: lecture7.ipynb  repetition.ipynb
2019_sem1/lecture8_optimization_techniques/: lecture8.ipynb
2019_sem1/lecture8_smart_pointers/: lecture.ipynb  repetition.ipynb
2019_sem1/lecture9_algo_lambdas/: lecture9.ipynb
2019_sem1/lecture9_optimization_techniques/: lecture.ipynb
2019_sem1/seminar10_algo_lambdas/: seminar.ipynb
2019_sem1/seminar10_arguments_rvo_nrvo/: seminar10.ipynb
2019_sem1/seminar11_undefined_behavior/: seminar.ipynb
2019_sem1/seminar12_undefined_behavior/: seminar.ipynb
2019_sem1/seminar1_inout_cmdline_compilation/: seminar1.ipynb
2019_sem1/seminar2_readfiles_cmake_unittests/: seminar2.ipynb
2019_sem1/seminar3_classes_1/: 1_ctors_order.cpp  seminar3.ipynb
2019_sem1/seminar4_classes_2/: seminar4.ipynb
2019_sem1/seminar5_templates/: seminar5.ipynb
2019_sem1/seminar6_containers_iterators/: seminar6.ipynb
2019_sem1/seminar7_smart_pointers/: seminar7.ipynb
2019_sem1/seminar8_optimization_techniques/: seminar8.ipynb
2019_sem1/seminar9_algo_lambdas/: seminar9.ipynb
2019_sem1/seminar9_optimization_techniques/: seminar.ipynb
2019_sem1/task4_ref/: reference.cpp
2020/sem1/lab2_stub/: CMakeLists.txt
2020/sem1/lab2_stub/src/: main.cpp
2020/sem1/lab2_stub/src/polynomiallib/: polynomial.h
2020/sem1/lab2_stub/src/tests/: polynomial_unittest.cpp
2021/sem1/: hometask_2.md  hometask_3.md  hometask_4.md
2021/sem2/: hometask_1.md  hometask_2.md  hometask_3.md
2022/sem1/: hometask_1.md  hometask_2.md
2022/sem2/: hometask_1.md  hometask_2.md  hometask_3.md
2023/sem1/: hometask_1.md  hometask_2.md  hometask_4.md
2023/sem2/: hometask_1.md  hometask_2.md
2024/sem1/: hometask_1.md  hometask_4.md
2024/sem1/lab1_stub/hasher/: CMakeLists.txt
2024/sem1/lab1_stub/hasher/docker/: Dockerfile  README.md  run_tests.py
2024/sem1/lab1_stub/hasher/integration_tests/: ascii_ext.crc32.out  ascii_ext.sum32.out  size2.crc32.out  size2.sum32.out  size3.sum32.out  size8.sum32.out  size9.crc32.out  song.in  tests.json
2024/sem1/lab1_stub/hasher/src/: hash.h
2025/sem1/: hometask_1.md  hometask_2.md  hometask_3.md  hometask_4.md
2025/sem1/lab2_stub/matrix/: CMakeLists.txt
2025/sem1/lab2_stub/matrix/integration_tests/: find_max_value.cpp  inverse_matrix.cpp  moved_from_value.cpp  negative_rows_count_is_not_allowed.cpp  num_cols.cpp  num_rows.cpp  num_values.cpp  tests.json
2025/sem1/lab3_stub/render/: CMakeLists.txt  CMakeLists.txt.gtest.in
2025/sem1/lab3_stub/render/docker/: run_tests.py
2025/sem1/lab3_stub/render/integration_tests/: bring_to_front.script  delete.ppm  error_create_circle_too_many_arguments.script  error_create_color_r_out_of_range.script  error_create_existing_id.script  error_create_negative_id.script  error_create_rectangle_negative_h.script  error_create_rectangle_negative_w.script  error_delete_not_existing_id.script  error_move_not_existing_id.script  error_render_negative_scene_w.script  error_scale_not_existing_id.script  move.ppm  scale.ppm  set_color.ppm  set_color.script  triangle.ppm  triangle.script
2025/sem1/lab3_stub/render/src/: figure.cpp
2025/sem2/: hometask_1.md  hometask_2.md  hometask_3.md
(+441 files in other folders)
